--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+
+  "homepage":"http://abdelhakayad.github.io/fylo",
   "name": "fylo-drive",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "vite build",
     "preview": "vite preview"
   },
